--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div fxLayoutAlign="center center" fxFlexFill class="main-div">
     <mat-card fxFlex="25">
-        <mat-toolbar color="white">Login Page</mat-toolbar>
+        <mat-toolbar color="primary">Login</mat-toolbar>
         <form fxLayoutAlign="stretch" fxLayout="column" class="login-form">
             <mat-form-field>
                 <input matInput placeholder="Username">
@@ -9,7 +9,7 @@
             <mat-form-field>
                 <input matInput type="password" placeholder="Password" >
             </mat-form-field>
-            <button mat-raised-button type="submit">Login</button>
+            <button mat-raised-button type="submit" color="primary">Login</button>
         </form> 
     </mat-card>
 </div>
