Edit registration template

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,9 +1,7 @@
 <mat-toolbar color="primary" class="mat-elevation-z4">
     <span>App name</span>
-    
     <div class="spacer"> </div>
-    
-    <a mat-raised-button color="accent">Register</a>
-    <a mat-button>About</a>
-    
+    <a mat-raised-button color="accent" routerLink="register">Register</a>
+    <a mat-button routerLink="login">Login</a>
+    <a mat-button routerLink="about">About</a>
 </mat-toolbar>
